--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-<style>
-body {
+<body {
   background-color: #black;
 }
-
+</body>
 person {
   border: 10px solid transparent;
   margin-bottom: 25px;
