--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,14 @@
   background-color: #black;
 }
 </body>
-person {
+<person {
   border: 10px solid transparent;
   margin-bottom: 25px;
   width: 80%;
   height: 80%;
   opacity: 0.7;
-}
+} </person>
 person:hover {
   border-color: #f1f1f1;
 }
-</style>
+
