--- a/main.css
+++ b/main.css
@@ -1,15 +1,6 @@
-<body {
+body {
   background-color: #black;
 }
-</body>
-<person {
-  border: 10px solid transparent;
-  margin-bottom: 25px;
-  width: 80%;
-  height: 80%;
-  opacity: 0.7;
-} </person>
-person:hover {
-  border-color: #f1f1f1;
-}
+
+
 
