--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     margin: auto;
   }
   .carousel-caption h3 {
-    color: #fff !important;
+    color: #fff ;
   }
   @media (max-width: 600px) {
     .carousel-caption {
@@ -93,15 +93,15 @@
     margin-bottom: 0;
     background-color: #2d2d30;
     border: 0;
-    font-size: 11px !important;
+    font-size: 11px ;
     letter-spacing: 4px;
     opacity: 0.9;
   }
   .navbar li a, .navbar .navbar-brand { 
-    color: #d5d5d5 !important;
+    color: #d5d5d5;
   }
   .navbar-nav li a:hover {
-    color: #fff !important;
+    color: #fff;
   }
   .navbar-nav li.active a {
     color: #fff ;
