--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     -webkit-filter: grayscale(90%);
     filter: grayscale(90%); /* make all photos black and white */ 
     width: 100%; /* Set width to 100% */
-    margin: auto;
+    margin: 100px;
   }
   .carousel-caption h3 {
     color: #fff ;
