--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,7 @@
   }
   .carousel-inner img {
     -webkit-filter: grayscale(90%);
-    filter: grayscale(90%); /* make all photos black and white */ 
-    width: 100%; /* Set width to 100% */
+    width: 100%; 
     margin: 100px;
   }
   .carousel-caption h3 {
@@ -32,7 +31,7 @@
   }
   @media (max-width: 600px) {
     .carousel-caption {
-      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+      display: none; 
     }
   }
   .bg-1 {
@@ -82,11 +81,7 @@
   .nav-tabs li a {
     color: #777;
   }
-  #googleMap {
-    width: 100%;
-    height: 400px;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
+
   }  
   .navbar {
     font-family: Montserrat, sans-serif;
