--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@
   }
   .modal-header, h4, .close {
     background-color: #333;
-    color: #fff !important;
+    color: #fff;
     text-align: center;
     font-size: 30px;
   }
