--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -7,6 +7,7 @@
     letter-spacing: 10px;      
     font-size: 20px;
     color: #111;
+    text-shadow: 2px 2px #5F9EA0;
   }
   .container {
     padding: 80px 120px;
