--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -34,8 +34,8 @@
     }
   }
   .bg-1 {
-  width: 100%;
-  height: 300px;
+    background: #2d2d30;
+    color: #bdbdbd;
 }
   }
   .bg-1 h3 {color: #fff;}
