--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -34,8 +34,10 @@
     }
   }
   .bg-1 {
-    background: #2d2d30;
-    color: #bdbdbd;
+     background-image: url('https://vibadance.com/wp-content/uploads/2021/07/Anina-576x1024.jpg');
+   background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid ;
 }
   }
   .bg-1 h3 {color: #fff;}
