--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -1,4 +1,4 @@
- body {
+body {
     font: 400 15px/1.8 Lato, sans-serif;
     color: #777;
   }
@@ -7,7 +7,6 @@
     letter-spacing: 10px;      
     font-size: 20px;
     color: #111;
-    text-shadow: 2px 2px #5F9EA0;
   }
   .container {
     padding: 80px 120px;
@@ -24,6 +23,7 @@
   }
   .carousel-inner img {
     width: 100%; 
+
   }
   .carousel-caption h3 {
     color: #fff ;
@@ -32,17 +32,30 @@
     .carousel-caption {
       display: none; 
     }
+  }
   .bg-1 {
-     background-image: url("https://vibadance.com/wp-content/uploads/2021/07/Anina-576x1024.jpg");
-   background-repeat: no-repeat;
-  background-size: contain;
-}
+    background: #2d2d30;
+    color: #bdbdbd;
   }
   .bg-1 h3 {color: #fff;}
   .bg-1 p {font-style: italic;}
-
+  .list-group-item:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
   }
-
+  .list-group-item:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  .thumbnail p {
+    margin-top: 15px;
+    color: #555;
+  }
   .btn {
     padding: 10px 20px;
     background-color: #333;
@@ -64,7 +77,9 @@
   .modal-header, .modal-body {
     padding: 40px 50px;
   }
-
+  .nav-tabs li a {
+    color: #777;
+  }
   .navbar {
     font-family: Montserrat, sans-serif;
     margin-bottom: 0;
@@ -115,4 +130,3 @@
   textarea {
     resize: none;
   }
-
