--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -38,7 +38,7 @@ body {
   
        background-image: url('https://vibadance.com/wp-content/uploads/2021/07/Anina-576x1024.jpg');
 	   background-repeat: no-repeat;
-	  background-size: contain;
+	  background-size: contain, cover;
  
 	  }
 	  .bg-1 h3 {color: #fff;}
