--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -36,7 +36,7 @@ body {
   }
   .bg-1 {
   
-       background-image: url('https://vibadance.com/wp-content/uploads/2021/07/Anina-576x1024.jpg');
+       background-image: "Anina.jpg";
 	   background-repeat: no-repeat;
 	  background-size: contain, cover;
  
