--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -36,7 +36,7 @@ body {
   }
   .bg-1 {
   
-       background-image: "Anina.jpg";
+       background-image: url("Anina.jpg");
 	   background-repeat: no-repeat;
 	  background-size: contain, cover;
  
