--- a/stylestoinen.css
+++ b/stylestoinen.css
@@ -41,7 +41,7 @@ body {
 	  background-size: contain;
  
 	  }
-	  .bg-1 h3 {color: #fff;}
+	  .bg-1 h3 {color: #000000;}
 	  .bg-1 p {font-style: italic;}
 	
 	  }
